; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_processor.c_processor_info_count.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_processor.c_processor_info_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROCESSOR_BASIC_INFO_COUNT = common dso_local global i32 0, align 4
@PROCESSOR_CPU_LOAD_INFO_COUNT = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @processor_info_count(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %13 [
    i32 129, label %7
    i32 128, label %10
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @PROCESSOR_BASIC_INFO_COUNT, align 4
  %9 = load i32*, i32** %5, align 8
  store i32 %8, i32* %9, align 4
  br label %17

10:                                               ; preds = %2
  %11 = load i32, i32* @PROCESSOR_CPU_LOAD_INFO_COUNT, align 4
  %12 = load i32*, i32** %5, align 8
  store i32 %11, i32* %12, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @cpu_info_count(i32 %14, i32* %15)
  store i32 %16, i32* %3, align 4
  br label %19

17:                                               ; preds = %10, %7
  %18 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %13
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @cpu_info_count(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
